--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-      <img src="/home/ankur/Medha web_development/css my site/images/Picsart_22-04-07_16-00-39-007-modified.png" alt="medha's profile picture">
+      <img src="images/Picsart_22-04-07_16-00-39-007-modified.png" alt="medha's profile picture">
         <h2>Hello.</h2>
         <p class="intro">I am a student at United College of Engineering and Reasearch.I am from Computer Science and Engineering department.I like coding.</p>
       </div>
@@ -26,12 +26,12 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-        <img class="code-img" src="/home/ankur/Medha web_development/css my site/images/Picsart_22-05-29_17-45-22-256-modified (1) (1).png" alt="code-img">
+        <img class="code-img" src="images/Picsart_22-05-29_17-45-22-256-modified (1) (1).png" alt="code-img">
           <h3>Design & Development</h3>
           <p>I started learning programming since I was 14 years old because I have a great interest in coding.Over time I learnt programming languages that is Java,C.I know HTMl and CSS as well.</p>
           </div>
           <div class="skill-row">
-          <img class="fries-img" src="/home/ankur/Medha web_development/css my site/images/Picsart_22-05-29_17-11-46-305-modified.png" alt="fries-img">
+          <img class="fries-img" src="images/Picsart_22-05-29_17-11-46-305-modified.png" alt="fries-img">
           <h3>French Fries Challange</h3>
           <p>But I like eating french fries.I am the undisputed queen in french fries challange.I like Italian food.</p>
           </div>
@@ -45,6 +45,6 @@
           </div>
           <div class="bottom-container">
           <a class="footer-link" href="https://www.linkedin.com/in/medha-dwivedi-558795244">LinkedIn</a>
-          <a class="footer-link" href="file:///home/ankur/Medha%20web_development/HTML-Personal%20Site/index.html">Website</a>
+          <a class="footer-link" href="https://medha0909.github.io/cv/">Website</a>
           <p class="copyright">Medha Dwivedi.</p>
           </div>
